--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -91,7 +91,7 @@
             <li>
               <a
                 data-title="Home"
-                data-template="home"
+                data-template="home/"
                 rel="prefetch"
                 href="./"
                 class="link"
@@ -101,7 +101,7 @@
             <li>
               <a
                 data-title="Courses"
-                data-template="courses"
+                data-template="courses/"
                 rel="prefetch"
                 href="./courses/"
                 class="courseLink link"
@@ -178,7 +178,7 @@
             <li>
               <a
                 data-title="Home"
-                data-template="home"
+                data-template="home/"
                 rel="prefetch"
                 href="./"
                 class="link"
@@ -188,7 +188,7 @@
             <li>
               <a
                 data-title="Courses"
-                data-template="courses"
+                data-template="courses/"
                 rel="prefetch"
                 href="./courses/"
                 class="courseLink link"
