--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -52,18 +52,10 @@
         <nav class="grid gap-4" aria-label="Main">
           <ul class="menu menu-sm">
             <li>
-              <a
-                rel="prefetch"
-                href="./"
-                class="link"
-                >Home</a
-              >
+              <a rel="prefetch" href="./" class="link">Home</a>
             </li>
             <li>
-              <a
-                rel="prefetch"
-                href="./courses/"
-                class="courseLink link"
+              <a rel="prefetch" href="./courses/" class="courseLink link"
                 >Courses</a
               >
             </li>
@@ -135,18 +127,10 @@
         <nav class="navbar-center flex" aria-label="Main">
           <ul class="menu menu-horizontal px-1">
             <li>
-              <a
-                rel="prefetch"
-                href="./"
-                class="link"
-                >Home</a
-              >
+              <a rel="prefetch" href="./" class="link">Home</a>
             </li>
             <li>
-              <a
-                rel="prefetch"
-                href="./courses/"
-                class="courseLink link"
+              <a rel="prefetch" href="./courses/" class="courseLink link"
                 >Courses</a
               >
             </li>
