Update Credly profile link in main layout

--- a/apps/ethang-vanilla/src/layouts/main-layout.html
+++ b/apps/ethang-vanilla/src/layouts/main-layout.html
@@ -90,7 +90,7 @@
             </li>
             <li>
               <a
-                href="https://www.credly.com/users/ethan-glover.341d99c5"
+                href="https://www.credly.com/users/ethang"
                 target="_blank"
                 class="link"
                 >Credly</a
