Add YouTube and NewsItem components, update blog content
Introduced `YouTube` and `NewsItem` Astro components to enhance content presentation. Added new blog post and linked it to the homepage. Updated dependency versions, including `luxon` and `@types/luxon`, and improved date calculation in the application stats chart.

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -3,6 +3,11 @@ import Layout from "../layouts/Layout.astro";
 
 const blogs = [
   {
+    id: "reads-04-10-2025",
+    link: "/blog/reads-04-10-2025",
+    title: "Reads 04/10/2025",
+  },
+  {
     id: "local-first",
     link: "/blog/local-first",
     title: "The Local First Stack",
