--- a/apps/ethang-astro/src/pages/blog/reads-04-10-2025.astro
+++ b/apps/ethang-astro/src/pages/blog/reads-04-10-2025.astro
@@ -72,7 +72,7 @@ const date = DateTime.fromObject({ month: 4, day: 10, year: 2025 });
     </NewsItem>
 
     <NewsItem
-      title="Google: Annoucing AI Mode"
+      title="Google: Announcing AI Mode"
       originalLink="https://www.youtube.com/watch?v=qbqZQFOVfA8"
     >
       <Fragment slot="content">
