--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -11,7 +11,7 @@ const blogs = [
   {
     id: `reads-${recentReadDate}`,
     link: `/blog/reads-${recentReadDate}`,
-    title: `Reads ${recentRead.toLocaleString({ dateStyle: "medium" })}`,
+    title: `Dev Reads - ${recentRead.toLocaleString({ dateStyle: "medium" })}`,
   },
   {
     id: "local-first",
