add ocr to lib list

--- a/apps/ethang-astro/src/pages/blog/javascript-standard-library.astro
+++ b/apps/ethang-astro/src/pages/blog/javascript-standard-library.astro
@@ -226,6 +226,16 @@ import Layout from "../../layouts/Layout.astro";
             </td>
           </tr>
           <tr>
+            <td>OCR</td>
+            <td class="text-error">None</td>
+            <td class="text-success">
+              <a href="https://github.com/naptha/tesseract.js" target="_blank"
+                >Tesseract.js</a
+              >, a javascript library that gets words in almost any language out
+              of images.
+            </td>
+          </tr>
+          <tr>
             <td>Natural Language Processing</td>
             <td class="text-error">None</td>
             <td class="text-success">
