max width adjustment

--- a/apps/ethang-astro/src/pages/blog/javascript-standard-library.astro
+++ b/apps/ethang-astro/src/pages/blog/javascript-standard-library.astro
@@ -3,7 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout>
-  <main class="prose">
+  <main class="prose max-w-5xl">
     <h1>Why You Should Install That JS Library</h1>
     <p>
       One of the most requested features for JavaScript is for a standard
