Add blog post on avoiding state management libraries
Introduce a new blog post titled "We Don't Need State Management Libraries," discussing state management approaches, UI libraries, and reactivity patterns. This update adds content, code examples, and relevant insights while including navigation and a corresponding blog entry link on the index page.

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -3,6 +3,11 @@ import Layout from "../layouts/Layout.astro";
 
 const blogs = [
   {
+    id: "dont-need-state-management-libraries",
+    link: "/blog/dont-need-state-management-libraries",
+    title: "We Don't Need State Management Libraries",
+  },
+  {
     id: "local-first",
     link: "/blog/local-first",
     title: "The Local First Stack",
