--- a/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
+++ b/apps/ethang-astro/src/pages/blog/dont-need-state-management-libraries.astro
@@ -158,7 +158,10 @@ const name = useSyncExternalStore(
 <div>{name}</div>`;
 ---
 
-<Layout>
+<Layout
+  title="We Don't Need State Management Libraries"
+  description="Why developers don't need state management libraries and what they need instead."
+>
   <main class="prose">
     <h1>We Don't Need State Management Libraries</h1>
     <nav aria-label="Table Of Contents">
